--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for Perl extension Geo::ShapeFile.
 
 0.01  Wed Dec 11 15:27:53 2002
     - original version; created by h2xs 1.22 with options
-    	-X Geo::ShapeFile
+        -X Geo::ShapeFile
 
 1.5   Sun Feb 16 11:35:00 2003
     - initial release
@@ -12,13 +12,25 @@ Revision history for Perl extension Geo::ShapeFile.
     - initial support for creating new shapefiles
     - removed some less-than-useful required modules
 
-2.11
+2.50  Sat Jul  3 19:08:50 EDT 2004
+    - things calming down at new job, more free time at home for pet projects.
+      hopefully this means more Geo::ShapeFile support to come (as well as
+      posting some new modules in progress)
     - fixed windows bug reported by Patrick Dughi
-
-2.40
     - object caching
     - fixed another windows bug reported by A. B. Jones
     - fixed dumb regexp bug that wouldn't let you use directories with a dot in
       them (doh!).  Reported by Leo WEST
     - fixed documentation bug for shapes_in_area reported by Chad Harp
     - fixed endianess bug reported by Daniel Gildea
+    - fixed some count issues, and code cleanup reported by Fergus McMenemie
+    - documentation clarification suggested by Christopher Eykamp
+    - fixed divide by zero bug when using angle_to() on points with the same
+      X value, reported by Frank Maas
+    - fixed bug where has_point() missed points that fell exactly on the
+      boundary of the area specified, reported by Frank Maas
+    - modified dbf file reader to correctly load DBF files that don't have
+      an end-of-file marker byte.  This should correct the 'file size off
+      by one byte' bug first reported by Attila Csipa (sorry it took so long,
+      I couldn't find data that reproduced it), patch submitted by
+      Aleksandar Jelenak.
