Import of JASONK/Geo-ShapeFile-2.52 from CPAN.
gitpan-cpan-distribution: Geo-ShapeFile
gitpan-cpan-version:      2.52
gitpan-cpan-path:         JASONK/Geo-ShapeFile-2.52.tar.gz
gitpan-cpan-author:       JASONK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,43 @@
 Revision history for Geo::ShapeFile.
 
+2.52  Fri Sep 14 10:43:34 EDT 2007
+    - Fixed the overloading setup in Geo::ShapeFile::Point to keep it from
+      failing the tests caused by recent changes in Test::Builder (it was
+      definitely my bug though, don't blame the excellent Test modules for
+      it!)  This bug was reported by Hermann Schwaerzler, Andrew Koebrick,
+      Celia Mackie, Andrew McGregor, and probably a lot of other folks
+      (you can thank all these people for release 2.52, it was this bug that
+      clued me in how many people were actually using the package, I hadn't
+      intended to do another release until 3.00 was ready to go.)
+    - FINALLY fixed the (hopefully last of) the big-endian problem.  I
+      hadn't planeed to include this in this release, as I was still trying
+      to figure out how to fix it, but while going through my Geo::ShapeFile
+      related mail to see if there were any other little problems reported
+      that I could include, I discovered a wonderful patch that had been
+      sent to me some time ago by Jerry Leibold, which had somehow fallen
+      through the cracks.  My apologies for taking 2 years to get this
+      fixed, but every time I tried to figure out a solution I was stymied
+      by my lack of big-endian hardware (not to mention the fact that my
+      day job hasn't included mapping for several years, so I have precious
+      little free time to spend on maintaining Geo::ShapeFile, and most of
+      that time I've been putting into version 3.00)  This problem was also
+      reported by Josh Narins and probably other people whose emails I have
+      since misplaced.
+    - Reorganized the package layout a bit, so you can do 'prove -vl t' in
+      the distribution directory now.
+    - Roger Crew pointed out that the centroid of a polygonal area is
+      different from the centroid of its vertices, and contributed a new
+      area_centroid() method for Geo::ShapeFile::Shape.  I renamed the
+      existing centroid() method to vertex_centroid(), although for the
+      time being, centroid() is an alias to vertex_centroid().
+    - Roger Crew also contributed a contains_point() method for
+      Geo::ShapeFile::Shape that determines whether a given point falls
+      within the interior of the shape.  Miroslav Suchy also contributed
+      a similar method, but I used Roger's because it didn't add any more
+      external dependencies.
+    - Fixed an argument ordering bug in Geo::ShapeFile::bounds_contains_point
+      (also reported by Roger Crew, thanks for the all the help Roger!)
+
 2.51  Thu May 12 11:01:41 EDT 2005
     - Corrected a stupid math problem in Geo::ShapeFile::Shape::centroid
       function, reported by an anonymous rt.cpan.org user.
