Import of SLAFFAN/Geo-ShapeFile-2.55_001 from CPAN.
gitpan-cpan-distribution: Geo-ShapeFile
gitpan-cpan-version:      2.55_001
gitpan-cpan-path:         SLAFFAN/Geo-ShapeFile-2.55_001.tar.gz
gitpan-cpan-author:       SLAFFAN
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,24 @@
 Revision history for Geo::ShapeFile.
 
+2.55_001 2014-02-12
+    - Shawn Laffan
+    - Add Geo::ShapeFile::Shape::Index as a simple 2-d block based index.
+    - Geo::Shape::ShapeFile now uses a spatial index for the segments.
+      This speeds up the contains_point routines by about 50-70% when used.
+      The index is opt-in at the moment, so will have no effect on existing code.
+    - Geo::ShapeFile::get_part now returns an array ref in scalar context.
+    - Geo::ShapeFile::Point::angle_to now works.
+    - Many of the undocumented methods have been renamed to use a leading underscore,
+      as they are private methods.  This avoids a number of POD test warnings.
+    - Add parent, POSIX and autovovofication to the list of dependencies in the makefile.
+
+2.54 2014-02-11
+    - Shawn Laffan
+    - Fix https://rt.cpan.org/Ticket/Display.html?id=89563
+      Thanks to Daniel Smith for reporting, and also providing an optimisation
+      which also handles edge overlap cases.
+    - Reorganise the test suite to allow running of subsets of tests.
+
 2.53_003 2014-02-10
     - Shawn Laffan
     - Clear up several longstanding RT tickets:
