Import of SLAFFAN/Geo-ShapeFile-2.56 from CPAN.
gitpan-cpan-distribution: Geo-ShapeFile
gitpan-cpan-version:      2.56
gitpan-cpan-path:         SLAFFAN/Geo-ShapeFile-2.56.tar.gz
gitpan-cpan-author:       SLAFFAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Geo::ShapeFile.
 
-2.55_001 2014-02-12
+2.56 2014-02-18
+    - Shawn Laffan
+    - CPAN smokers are green for 2.55_001, so bump the version number and release as a full version.
+
+2.55_001 2014-02-17
     - Shawn Laffan
     - Add Geo::ShapeFile::Shape::Index as a simple 2-d block based index.
     - Geo::Shape::ShapeFile now uses a spatial index for the segments.
